compare ms2 of two features